# zephyr

./: .gitignore  Notes-2024-Feb.txt  Zephyr-Crypto.txt  z9-lock-zephyr.code-workspace
drivers/gpio/: gpio_pca_series.c
drivers/led/: led_shell.c  pca9633.c
dts/arm/ti/: cc2652r7.dtsi
manifest-repo/: west.yml
soc/arm/atmel_sam0/common/: CMakeLists.txt  Kconfig.saml2x  adc_fixup_sam0.h
soc/arm/atmel_sam0/saml22/: Kconfig.series  Kconfig.soc  soc.h
soc/atmel/sam0/common/: CMakeLists.txt  Kconfig.saml2x
src/: .gitignore  Z9IOProtocol_Current.h  Z9IOProtocol_Current_MetaData.h  Z9LockIOProtocol_Current.h  Z9LockIOProtocol_Current_MetaData.h  kas_string.h
src/.west/: config
src/controller/: CMakeLists.txt  Kconfig  atsaml22_xpro.overlay  prj.conf
src/controller/aes-gcm/: CMakeLists.txt  README
src/controller/aes-gcm/aes-gcm/: aes.cc  aes.h  cipher.cc  cipher.h  cipher_internal.h  cipher_wrap.cc  config.h  gcm.cc  gcm.h  main.c
src/controller/boards/: atsaml22_xpro.conf  atsaml22_xpro.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  wl_athena.conf
src/controller/boards/arm/atsaml22_xpro/: atsaml22_xpro.dts  atsaml22_xpro_defconfig
src/controller/boards/arm/wl_athena/: Kconfig.board  wl_athena-pinctrl.dtsi  wl_athena.dts
src/controller/src/: main.cc
src/controller/src/aes-gcm/: CMakeLists.txt  Kconfig  README  cipher.c  cipher.h  cipher_internal.h  z9-gcm-aes.c  z9-gcm-aes.h  z9-gcm-c.c  z9-gcm-c.h
src/manifest-repo/: west.yml
src/reader/: CMakeLists.txt  Kconfig  atsaml21_xpro.overlay  atsaml22_xpro.overlay  nrf52840dk_nrf52840.overlay  prj.conf
src/reader/boards/: bl5340_dvk_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp.overlay  wl_athena_radio.overlay  wl_radio_nrf_nrf_cpuapp.overlay  wl_radio_nrf_stock_cpuapp.overlay
src/reader/boards/arm/wl_athena_radio/: Kconfig  Kconfig.defconfig  nrf5340_cpuapp_common.dtsi  nrf5340_cpuapp_partition_conf.dtsi  nrf5340_cpunet_reset.c  wl_athena_radio_cpuapp.dts  wl_athena_radio_cpuapp.yaml  wl_athena_radio_cpuapp_ns.yaml  wl_athena_radio_cpunet.dts  wl_athena_radio_cpunet.yaml
src/reader/boards/arm/wl_radio_nrf_nrf/: Kconfig  Kconfig.defconfig  nrf5340_cpuapp_partition_conf.dtsi  nrf5340_cpunet_reset.c  wl_radio_nrf_nrf_cpuapp.yaml  wl_radio_nrf_nrf_cpuapp_defconfig  wl_radio_nrf_nrf_cpuapp_ns.yaml  wl_radio_nrf_nrf_cpunet.dts  wl_radio_nrf_nrf_cpunet.yaml
src/reader/src/: button.c
src/reader/st25r3916/: CMakeLists.txt  Kconfig  st25r3911b_spi.c
src/z9-lock/: CMakeLists.txt  Kconfig  nrf52840dongle_nrf52840.overlay  prj.conf
src/z9-lock/src/: Eros_protocol.cc  EventDb.h  ProtocolMetadata.h  SerializeNotes.txt  Serialize_Example.cc  Z9Crypto.h  Z9IOProtocol_Current.cpp  Z9IO_Device.h  Z9LockIOProtocol_Current_MetaData.h  Z9Serialize.h  button.h  dk_buttons_and_leds.c  main.cc
src/z9-zephyr/: CMakeLists.txt  Kconfig.z9
src/z9-zephyr/ble/: Eros_protocol.cc  Eros_protocol.h  EventDb.cc  EventDb.h  KernelBuffer.c  KernelBuffer.h  KernelCharacterBuffer.c  KernelCharacterBuffer.h  ModelInfo.cc  ModelInfo.h  ObjectModel-Serialize.txt  Serialize.cc  Settings.cc  Settings.h  Z9Crypto.cc  Z9Crypto_gcm.cc  Z9Crypto_gcm.h  Z9Crypto_gcm_KCB.cc  Z9Crypto_gcm_KCB.h  Z9IOProtocol_Current.h  Z9IO_Device.c  Z9IO_Link.h  Z9IO_Link_Controller.cc  Z9IO_Link_Remote.cc  Z9IO_Logic.cc  Z9IO_Logic.h  Z9LockIOProtocolTest_KCB.h  Z9LockIOProtocol_Current.cpp  Z9LockIOProtocol_Current.h  Z9LockIOProtocol_Current_Serialization.h  Z9LockIOProtocol_Serialize.cc  Z9LockIO_ECDH.cc  Z9LockIO_ECDH.h  Z9LockIO_accessReq.cc  Z9LockIO_accessReq.h  Z9LockIO_bundleHeader.cc  Z9LockIO_bundleHeader.h  Z9LockIO_credAuthorization.cc  Z9LockIO_credAuthorization.h  Z9LockIO_dbChange.cc  (+24 more)
src/z9-zephyr/boards/arm/atsaml22_xpro/: Kconfig.board  Kconfig.defconfig  atsaml22_xpro-pinctrl.dtsi  atsaml22_xpro.dts  atsaml22_xpro.yaml
src/z9-zephyr/boards/arm/atsaml22_xpro/support/: openocd.cfg
src/z9-zephyr/boards/arm/wl_athena/: Kconfig.defconfig  wl_athena-pinctrl.dtsi  wl_athena.dts  wl_athena.yaml  wl_athena_defconfig
src/z9-zephyr/doc/: LockBleProfile.md  LockErosProtocol.md  z9io.md  z9io_data.md  z9lockio.md  z9lockio_data.md
src/z9-zephyr/dts/arm/atmel/: saml22.dtsi
src/z9-zephyr/nfc/stsw-st25r/RFAL/source/st25r3916/: rfal_rfst25r3916.c
src/z9-zephyr/nfc/stsw-st25r/RFAL/source/st25r95/: rfal_features.h  rfal_rfst25r95.c  st25r95.c  st25r95.h  st25r95_com.c  st25r95_com.h  st25r95_com_spi.c  st25r95_com_uart.c
src/z9-zephyr/nfc/stsw-st25r/src/STSW-ST25R-LIB/ST25NFC_Embedded_Lib_ST25R3916(B)_1.5.0/Drivers/BSP/NFC06A1/: nfc06a1.c  nfc06a1.h
src/z9-zephyr/nfc/stsw-st25r/src/STSW-ST25R-LIB/ST25NFC_Embedded_Lib_ST25R95_1.5.0/Middlewares/ST/ST25FTM/: st25ftm_config_template.h
src/z9-zephyr/nfc/stsw-st25r/st25r_common/firmware/STM/STM32/Src/: timer.c
src/z9-zephyr/soc/arm/atmel_sam0/saml22/: Kconfig.defconfig.series  Kconfig.series
src/z9-zephyr/src/: Crc16.c  Crc16.h  DbStore.cc  DbStore.h  GcmCryptoTest.c  GcmCryptoTest.h  KernelBuffer.h  KernelCharacterBuffer.c  KernelCharacterBuffer.h  Z9Crypto.cc  Z9Crypto.h  Z9Crypto_gcm_KCB.cc  Z9Crypto_gcm_KCB.h  Z9IO_Device.c  Z9IO_Link.h  Z9IO_Link_Controller.cc  Z9IO_Link_Remote.cc  Z9IO_Logic.cc  Z9IO_Logic.h  Z9LockIO.cc  Z9LockIOProtocolTest_KCB.c  Z9LockIOProtocol_Current.c  Z9LockIOProtocol_Current.h  Z9LockIOProtocol_Current_Serialization.c  Z9LockIOProtocol_Current_Serialization_KCB.c  Z9LockIOProtocol_Current_Serialization_KCB.h  main.cc  private-key.pem  public-key.pem  settings.code-workspace
src/z9-zephyr/src/exec/: Z9Message.h  kas_string.h  main.cc
src/z9-zephyr/zephyr/: module.yml
z9-meta/: Z9IOProtocol_Current_MetaData.h  Z9LockIOProtocol_Current.h
(+194 files in other folders)
