cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
#set(ZEPHRY_MODULES modules/meta)

project(z9-lock)
include_directories(SYSTEM ../modules/meta/include)
include_directories(../z9-zephyr/ble)
target_sources(app PRIVATE src/main.cc)
target_sources(app PRIVATE src/button.c)

#target_sources(app PRIVATE ../z9-zephyr/ble/z9_ble_driver.c)
#target_sources(app PRIVATE ../z9-zephyr/ble/z9lockio_ble.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9Lock_status.cc)
#target_sources(app PRIVATE ../z9-zephyr/ble/Eros_protocol.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9Crypto.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9Crypto_gcm_KCB.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/EventDb.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Settings.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/KernelBuffer.c)
target_sources(app PRIVATE ../z9-zephyr/ble/KernelCharacterBuffer.c)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_protocol.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_bundleHeader.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_opaqueContent.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_eventControl.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_keyExchange.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_accessReq.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_dbChange.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_credAuthorization.cc)

#target_sources(app PRIVATE ../z9-zephyr/ble/DbStore.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9IO_Device.c)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9IO_Link_Controller.cc)
# target_sources(app PRIVATE ../z9-zephyr/ble/Z9IO_Link_Remote.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/ModelInfo.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9IO_Logic.cc)
# target_sources(app PRIVATE src/Z9Crypto.cc src/Z9Crypto_gcm_KCB.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Crc16.c)

