cmake_minimum_required(VERSION 3.20.0)

#list(APPEND BOARD_ROOT $ENV{ZEPHYR_BASE}/../z9-zephyr)
set(z9-zephyr "${CMAKE_CURRENT_SOURCE_DIR}/../z9-zephyr")
list(APPEND BOARD_ROOT /Users/kent/Projects/z9-lock-zephyr/src/z9-zephyr/boards)
list(APPEND BOARD_ROOT ${z9-zephyr})
#list(APPEND SOC_ROOT   "${z9-zephyr}/soc")
#list(APPEND DTS_ROOT   ${z9-zephyr})

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
#set(ZEPHRY_MODULES modules/meta)
#add_subdirectory_ifdef(CONFIG_Z9_GCM_C, aes-gcm)
add_subdirectory(aes-gcm)
include_directories(aes-gcm)

project(z9-lock)

include_directories(SYSTEM ../modules/meta/include)
include_directories(SYSTEM ../modules/crypto/mbedtls/configs)
include_directories(../z9-zephyr/ble)
target_sources(app PRIVATE src/main.cc)
target_sources(app PRIVATE src/button.c)

#target_sources(app PRIVATE ../z9-zephyr/ble/z9_ble_driver.c)
#target_sources(app PRIVATE ../z9-zephyr/ble/z9lockio_ble.cc)
#target_sources(app PRIVATE ../z9-zephyr/ble/Eros_protocol.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9Lock_status.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9Crypto_gcm.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9Crypto_gcm_KCB.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/EventDb.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Settings.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/KernelBuffer.c)
target_sources(app PRIVATE ../z9-zephyr/ble/KernelCharacterBuffer.c)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_protocol.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_bundleHeader.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_opaqueContent.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_eventControl.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_keyExchange.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_accessReq.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_dbChange.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_credAuthorization.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9LockIO_ECDH.cc)

#target_sources(app PRIVATE ../z9-zephyr/ble/DbStore.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9IO_Device.c)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9IO_Link_Controller.cc)
# target_sources(app PRIVATE ../z9-zephyr/ble/Z9IO_Link_Remote.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/ModelInfo.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9IO_Logic.cc)
# target_sources(app PRIVATE src/Z9Crypto.cc src/Z9Crypto_gcm_KCB.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Crc16.c)

