cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
#set(ZEPHRY_MODULES modules/meta)

project(z9-lock)
include_directories(SYSTEM ../modules/meta/include)
include_directories(../z9-zephyr/ble)
target_sources(app PRIVATE src/main.cc)
target_sources(app PRIVATE src/button.c)
#target_sources(app PRIVATE src/dk_buttons_and_leds.c)
target_sources(app PRIVATE ../z9-zephyr/ble/z9lockio_ble.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Eros_protocol.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/Z9Crypto.cc)
target_sources(app PRIVATE ../z9-zephyr/ble/EventDb.cc)
